[package]
name = "cfg_boost"
version = "1.0.0"
edition = "2021"
authors = ["NickelAnge.Studio <rust@nickelange.studio>"]
description = "Revamped syntax and macros to easily manage all #[cfg] parameters in one package. See README and/or Wiki for more details."
keywords = ["cfg", "match", "target", "boost", "meta"]
categories = ["configuration", "development-tools"]
repository = "https://github.com/NickelAngeStudio/cfg_boost"
homepage = "https://github.com/NickelAngeStudio/cfg_boost/wiki"
license = "MIT"
readme = "README.md"

# List of excluded files
exclude = [
    "target/*",
    "tests/*",
    ".git/*",
    ".github/*",
    ".gitignore",
    "dep_tag.png",
]

[lib]
proc-macro = true